k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsecraft
  labels:
    name: pulsecraft
    app.kubernetes.io/part-of: pulsecraft-telemetry
